[package]
name = "command-group"
version = "1.0.0"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0 OR MIT"
description = "Extension to Command to spawn in a process group"
keywords = ["command", "extension", "process", "group", "unix", "windows"]

documentation = "https://github.com/watchexec/command-group"
homepage = "https://github.com/watchexec/command-group"
repository = "https://github.com/watchexec/command-group"
readme = "README.md"

edition = "2018"
exclude = ["/bin", "/.github"]

[features]
# async-std = ["futures", "async-std"]

[dependencies]
# async-std = { version = "1.9.0", features = ["unstable"], optional = true }
# futures = { version = "0.3.15", optional = true }

[target.'cfg(unix)'.dependencies.nix]
version = "0.22.0"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = [
	"impl-default",
	"handleapi",
	"ioapiset",
	"jobapi2",
	"processthreadsapi",
	"tlhelp32",
	"winbase",
]
