[package]
name = "command-group"
version = "1.0.3"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0 OR MIT"
description = "Extension to Command to spawn in a process group"
keywords = ["command", "extension", "process", "group"]

documentation = "https://github.com/watchexec/command-group"
homepage = "https://github.com/watchexec/command-group"
repository = "https://github.com/watchexec/command-group"
readme = "README.md"

edition = "2018"
exclude = ["/bin", "/.github"]

[target.'cfg(unix)'.dependencies.nix]
version = "0.22.0"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = [
	"impl-default",
	"handleapi",
	"ioapiset",
	"jobapi2",
	"processthreadsapi",
	"tlhelp32",
	"winbase",
]
